# wyrm-lang

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  build.zig  build.zig.zon  make.ts
scripts/: test.sh
src/: main.c  main.cpp  main.zig  test.cpp
src/cli/: cli_parser.cpp  cli_parser.hpp
src/cli_utils/: cli_utils.c  cli_utils.h
src/compiler/: ast.c  ast.h  compiler.c  compiler.h  token.c  token.h
src/compiler/codegen/: codegen.c  codegen.h  frame.c
src/compiler/common/: cst.c  cst.h
src/compiler/cst_parser/: parser.c  parser.h
src/compiler/error/: error.c  error.h
src/compiler/lexer/: lexer.c  lexer.h  lexer.zig
src/compiler/parser/: decl.c  expr.c  parser.c  parser.h  stmt.c  type.c
src/compiler/semantic_analysis/: expr.c  name_res.c  name_res.h  semantic_analysis.h  symtable.c  symtable.h  typechecker.c
src/frontend/: ast.h  token.h
src/frontend/lexer/: lexer.c  lexer.h
src/frontend/parser/: expr.c  parser.c  parser.h
src/utils/: memory.c  memory.h
src/vm/: chunk.c  chunk.h  debug.c  debug.h  value.c  value.h  vm.c  vm.h
test/: fib.wr  info.txt  mutability.wr  segfault.wr  test.wr
tests/if_statements/: basic_if.wr  basic_if_else.wr
tests/op_precedence/: binary.wr  mixed.wr
tests/parameters/: fibonacci.wr
